--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "guid-typescript": "^1.0.9",
+    "random-word-slugs": "^0.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
