--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "random-word-slugs": "^0.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "unique-names-generator": "^4.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
