--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~12.1.0",
     "@fsms/angular-pubsub": "^2.0.89",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/file-saver": "^2.0.4",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.5",
     "guid-typescript": "^1.0.9",
     "random-word-slugs": "^0.1.6",
     "rxjs": "~6.6.0",
